# triggers

./: .gitignore  init.py  license.txt  main.py  publish.yml  pyproject.toml  readme.md  test.py  trigger.py
example/: conditions.csv  trigger_example.psyexp
example/stimuli/: nature.csv  urban.csv
src/digital_trigger/: __init__.py  trigger.py
