[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-trigger"
version = "0.1.0"
description = "Simple class for simplified pySerial interface for use in TTL event marking using e.g. PsychoPy."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Max Lovell", email = "max_lovell@hotmail.co.uk" },
]
keywords = ["psychology", "neuroscience", "psychopy", "eeg", "triggers", "serial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyserial>=3.0",
]

[project.urls]
Homepage = "https://github.com/Max-Lovell/triggers"
Issues = "https://github.com/Max-Lovell/triggers/issues"

[tool.setuptools.packages.find]
where = ["src"]